data/derived/fa15/progs/unify/prog0249.ml.out
Characters 66-71:
  | 0 -> if (rand(0,2) = 0) then Varx else Vary
                 ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type float
